<resources>
    <string name="app_name">PADC Assignment10 Movie</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_coming_soon">Coming Soon</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_more">More</string>
    <string name="main_tv_movies">Movies</string>
    <string name="tv_now_playing">Now Playing</string>
    <string name="tv_movies_and_tv">Movies and TV</string>
</resources>
