<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/menu_coming_soon"
        android:icon="@drawable/ic_video_library"
        android:title="@string/menu_coming_soon" />

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_vertical_align_bottom"
        android:title="@string/menu_downloads" />

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu_more" />

</menu>